Se modifican imagenes

--- a/Casas Boston - Modelos de Regresion.ipynb
+++ b/Casas Boston - Modelos de Regresion.ipynb
@@ -1706,15 +1706,14 @@
     }
    },
    "cell_type": "markdown",
-   "id": "7228d09c",
+   "id": "38490ec7",
    "metadata": {},
    "source": [
     "Los arboles de decisión es un algoritmo compuesto por un arbol jerarquico de condicionales \"if-then-else\", donde separa la data de entrenamiento original (la raiz del arbol) en dos diferentes subcategorías dependiendo de las caracteristicas o valores de los datos, estas dos subcategorías conformar en primer nodo del arbol. El algoritmo repite este procedimiento de separar los datos de cada subcategoría en dos conjuntos diferente, teniendo así, 4 subcategorías en total, que conforman el 3er nodo. En el caso de Regresión, este proceso lo repite hasta que los valores Y de los datos de entrenamiento son tan cercanos entre sí, separando los valores independientes X en diferentes subcategorías. A continuación una imagen de como luce la separación de los datos por este algoritmo, con 2 (izquierda) y 3 (derecha) nodos de profundidad:\n",
     "\n",
-    "<div>\n",
-    "<img src=\"attachment:TreeDecision.png\" width=\"700\"/>\n",
-    "<figcaption align = \"center\"> Imagen tomada de: Aurélien Géron. \"Hands-on Machine Learning with Scikit-Learn, Keras, and TensorFlow\". (2019). O’Reilly Media, Inc. Pag. 187</figcaption>\n",
-    "</div>\n"
+    "\n",
+    "![TreeDecision.png](attachment:TreeDecision.png)\n",
+    "Imagen tomada de: Aurélien Géron. \"Hands-on Machine Learning with Scikit-Learn, Keras, and TensorFlow\". (2019). O’Reilly Media, Inc. Pag. 187\n"
    ]
   },
   {
@@ -1724,15 +1723,14 @@
     }
    },
    "cell_type": "markdown",
-   "id": "399d39e4",
+   "id": "74ad8509",
    "metadata": {},
    "source": [
     "En caso de que haya demasiados nodos, el modelo puede correr el riesgo de sobreajuste por lo que es normal que el programador escoga la profundidad del arbol. A continuación una imagen de como luce la separación de datos si no se restringe el número de nodos (izquierda) y cuando se escoge una profundidad de 10 (derecha):\n",
     "\n",
-    "<div>\n",
-    "<img src=\"attachment:TreeDecision2.png\" width=\"700\"/>\n",
-    "<figcaption align = \"center\"> Imagen tomada de: Aurélien Géron. \"Hands-on Machine Learning with Scikit-Learn, Keras, and TensorFlow\". (2019). O’Reilly Media, Inc. Pag. 187</figcaption>\n",
-    "</div>\n",
+    "![TreeDecision2.png](attachment:TreeDecision2.png)\n",
+    "Imagen tomada de: Aurélien Géron. \"Hands-on Machine Learning with Scikit-Learn, Keras, and TensorFlow\". (2019). O’Reilly Media, Inc. Pag. 187\n",
+    "\n",
     "\n",
     "\n",
     "En contraste con la regresión lineal, los arboles de decisión tienen la habilidad de descubrir patrones escondidos correspondientes a interaccciones complejas en la data. Es por ello que realizaremos las mismas pruebas que con la regresión lineal simple y multiple para comparar ambos resultados.\n"
@@ -1916,7 +1914,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1fa30711",
+   "id": "4bb3b17d",
    "metadata": {},
    "source": [
     "### MEDV vs RN, LSTAT, INDUS"
@@ -1968,7 +1966,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07b18bd7",
+   "id": "d5de8440",
    "metadata": {},
    "source": [
     "Información  obtenida:\n",
@@ -1979,7 +1977,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe7ba1a4",
+   "id": "6a6283db",
    "metadata": {},
    "outputs": [],
    "source": []
