Se modifican imagenes 2

--- a/Casas Boston - Modelos de Regresion.ipynb
+++ b/Casas Boston - Modelos de Regresion.ipynb
@@ -1492,7 +1492,9 @@
     "$$ Y = \\bar{w} X + b$$\n",
     "\n",
     "A este hiperplano se le ajustan unas bandas que son llamadas vectores de soporte, que se encuentran a una distancia $\\epsilon$ y que tratarán de contener la mayoría de los puntos del modelo como se muestra en la siguiente imagen:\n",
+    "\n",
     "![SVM.png](attachment:SVM.png)\n",
+    "\n",
     "A los puntos fuera de las bandas conformarán los errores y se medirá la distancia $\\xi$ o $\\hat{\\xi}$ con respecto a la banda más cercana. El algoritmo tratará de minimizar la siguiente función de error:\n",
     "\n",
     "$$ \\dfrac{1}{2} ||\\bar{w}||^2 + C \\sum_{i=1}^n (\\xi_i + \\hat{\\xi_i})$$\n",
@@ -1706,7 +1708,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "38490ec7",
+   "id": "34d2a65d",
    "metadata": {},
    "source": [
     "Los arboles de decisión es un algoritmo compuesto por un arbol jerarquico de condicionales \"if-then-else\", donde separa la data de entrenamiento original (la raiz del arbol) en dos diferentes subcategorías dependiendo de las caracteristicas o valores de los datos, estas dos subcategorías conformar en primer nodo del arbol. El algoritmo repite este procedimiento de separar los datos de cada subcategoría en dos conjuntos diferente, teniendo así, 4 subcategorías en total, que conforman el 3er nodo. En el caso de Regresión, este proceso lo repite hasta que los valores Y de los datos de entrenamiento son tan cercanos entre sí, separando los valores independientes X en diferentes subcategorías. A continuación una imagen de como luce la separación de los datos por este algoritmo, con 2 (izquierda) y 3 (derecha) nodos de profundidad:\n",
@@ -1723,7 +1725,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "74ad8509",
+   "id": "dab1f3ec",
    "metadata": {},
    "source": [
     "En caso de que haya demasiados nodos, el modelo puede correr el riesgo de sobreajuste por lo que es normal que el programador escoga la profundidad del arbol. A continuación una imagen de como luce la separación de datos si no se restringe el número de nodos (izquierda) y cuando se escoge una profundidad de 10 (derecha):\n",
@@ -1914,7 +1916,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4bb3b17d",
+   "id": "e647b8b6",
    "metadata": {},
    "source": [
     "### MEDV vs RN, LSTAT, INDUS"
@@ -1966,7 +1968,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5de8440",
+   "id": "f5760b1a",
    "metadata": {},
    "source": [
     "Información  obtenida:\n",
@@ -1975,9 +1977,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "098fd0ea",
+   "metadata": {},
+   "source": [
+    "## 2.6 Bosques Aleatorios"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a6283db",
+   "id": "1feab68a",
    "metadata": {},
    "outputs": [],
    "source": []
