Se agrega proyecto completo de Titanic

--- a/Titanic - Modelos de Clasificacion.ipynb
+++ b/Titanic - Modelos de Clasificacion.ipynb
@@ -5,7 +5,7 @@
    "id": "6eda5944",
    "metadata": {},
    "source": [
-    "# Proyecto de EDA  y Clasificación usando datos de Kaggle: Analisis de Supervivencia Titanic"
+    "# Proyecto de  Clasificación usando datos de Kaggle: Analisis de Supervivencia Titanic"
    ]
   },
   {
